--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ __pycache__/
 data/**
 !data/
 !data/raw/
+!data/raw_ocr/
+!data/raw_ignored/
 !data/staging/
 !data/.gitkeep
 !data/raw/.gitkeep
@@ -17,4 +19,11 @@ logs/**
 !logs/.gitkeep
 
 .DS_Store
-.gitattributes
+.gitattributes__pycache__/
+*.pyc
+.DS_Store
+.venv*/
+logs/
+data/
+store/
+reports/
