--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ pyarrow==16.1.0
 fastapi==0.114.2
 uvicorn[standard]==0.30.6
 pydantic==2.9.2
+streamlit
+watchdog
 
 # --- Embeddings / NLP
 sentence-transformers==3.0.1
