--- a/configs/runtime.yaml
+++ b/configs/runtime.yaml
@@ -1,3 +1,4 @@
+# configs/runtime.yaml
 embedder:
   adapter: bge_local
   model: BAAI/bge-small-en-v1.5
@@ -5,15 +6,15 @@ embedder:
 vector_store:
   adapter: faiss_local
   path: data/embeddings/vectors.faiss
-  ids: data/embeddings/ids.npy
+  ids:  data/embeddings/ids.npy
   meta: data/staging/chunks.jsonl
-  embed_cache: data/embeddings/embeddings.npy  # optional
 
 reranker:
-  adapter: bge_reranker
+  adapter: bge_reranker         # or "none" if you haven’t added the adapter file yet
+  model: BAAI/bge-reranker-base
 
 llm:
-  adapter: openai
-  model: gpt-4o-mini
+  adapter: ollama               # "openai" if you actually want to pay
+  model: llama3.1               # or mistral, qwen2.5, phi3, etc.
   temperature: 0.2
-  max_output_tokens: 600
+  max_output_tokens: 800
